progress adding React

--- a/shared/containers/RatingTable/style.styl
+++ b/shared/containers/RatingTable/style.styl
@@ -1,19 +1,10 @@
-html, body {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font: 12px/14px Tahoma, Arial, sans-serif;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-
-
 .wrapper {
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   cursor: default;
 }
 
@@ -88,6 +79,10 @@ body {
 .hint ul {
   margin: 0;
   padding: 0 0 0 20px;
+}
+
+.hint a {
+  color: #fff;
 }
 
 body.not-mobile .faq:hover {
@@ -179,7 +174,7 @@ body.not-mobile .sidebarRow:hover,
   display: inline-block;
   vertical-align: top;
   zoom: 1;
-  *display: inline;
+*display: inline;
 }
 
 body.not-mobile .contentRow:hover,
@@ -201,7 +196,7 @@ body.not-mobile .contentRow:hover,
   display: inline-block;
   vertical-align: top;
   zoom: 1;
-  *display: inline;
+*display: inline;
 }
 
 
