--- a/client/assets/styl/index.styl
+++ b/client/assets/styl/index.styl
@@ -2,33 +2,24 @@
 @import "_fonts"
 
 
-*,
-*:before, 
-*:after
-  box-sizing: border-box
-  padding: 0
-  margin: 0
+//*,
+//*:before,
+//*:after
+//  box-sizing: border-box
+//  padding: 0
+//  margin: 0
 
 html
   height: 100%
   font-size: 62.5% /* 62.5% of 16px = 10px */
+  margin 0
+  padding 0
 
 body
   min-height: 100%
   background-color: #F0F3F7
-  position: relative
+  margin 0
+  padding 0
+  font-family -apple-system, BlinkMacSystemFont, GothamPro-Regular
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
-
-
-
-//@media (max-width: 20rem)
-//  /* 20*16px = 320px */
-//  background-color: lemonchiffon
-//  font-size: 200%
-//  /* 200% of 16px = 32px */
-//
-//@media (min-width: 20.001rem)
-//  /* 30*16px = 480px */
-//  background-color: lightblue
-//  font-size: 300% /* 300% of 16px = 30px */
