--- a/client/assets/styl/index.styl
+++ b/client/assets/styl/index.styl
@@ -17,9 +17,15 @@ html
 
 body
   min-height: 100%
-  background-color: #F0F3F7
+  background-color: #fff
   margin 0
   padding 0
   font-family -apple-system, BlinkMacSystemFont, GothamPro-Regular
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
+
+a
+  text-decoration: none
+  color $color_blue
+  &:hover
+    text-decoration: underline
