--- a/client/assets/styl/index.styl
+++ b/client/assets/styl/index.styl
@@ -2,12 +2,12 @@
 @import "_fonts"
 
 
-//*,
-//*:before,
-//*:after
-//  box-sizing: border-box
-//  padding: 0
-//  margin: 0
+*,
+*:before,
+*:after
+  box-sizing: border-box
+  padding: 0
+  margin: 0
 
 html
   height: 100%
@@ -26,6 +26,7 @@ body
 
 a
   text-decoration: none
-  color $color_blue
+  color #1c6b9c
   &:hover
     text-decoration: underline
+    color $color_blue
